--- a/Deep Reinforcement Learning/[MVA_2023]_Project_part_2_flappy_bird.ipynb
+++ b/Deep Reinforcement Learning/[MVA_2023]_Project_part_2_flappy_bird.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Project part 2: beat flappy bird\n",
         "\n",
-        "Team member: Hongyu Zhou, Jean-Frederic Diebold, Samuel Girard, Shiyao Li, Marceau Pailhas "
+        "Team member: Marceau Pailhas [and other people]"
       ]
     },
     {
@@ -327,12 +327,7 @@
         "# This is just for the purpose of this colab. Please do not share a ssh\n",
         "# private key in real life, it is a really unsafe practice.\n",
         "GITHUB_PRIVATE_KEY = \"\"\"-----BEGIN OPENSSH PRIVATE KEY-----\n",
-        "b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW\n",
-        "QyNTUxOQAAACD5ow+qHLZLVosHfeGcGeJKQgwUlPYgoFliCEsshiFhXwAAALCn99V2p/fV\n",
-        "dgAAAAtzc2gtZWQyNTUxOQAAACD5ow+qHLZLVosHfeGcGeJKQgwUlPYgoFliCEsshiFhXw\n",
-        "AAAECJ+OOLQqiwINexx26mmQt6FL5xXYHRf9Jv2UzahlW0avmjD6octktWiwd94ZwZ4kpC\n",
-        "DBSU9iCgWWIISyyGIWFfAAAAKm1yaXZpZXJlQG1yaXZpZXJlLW1hY2Jvb2twcm8ucm9hbS\n",
-        "5pbnRlcm5hbAECAw==\n",
+        "\n",
         "-----END OPENSSH PRIVATE KEY-----\n",
         "\"\"\"\n",
         "\n",
